--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="./css/style.css" />
   <link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon">
   <meta name="description" content="Bikcraft a melhor loja para se comprar bicicletas tecnologicas.">
-  <title>Bikcraft - As melhores Bicicletas</title>
+  <title>Bikcraft</title>
 </head>
 
 <body>
