url bicicleta nebula corrigida

--- a/bicicletas.html
+++ b/bicicletas.html
@@ -57,7 +57,7 @@
 
     <div class="bicicleta-bg">
       <div class="padding-bg bicicletas-ct">
-        <div class="valor nebula-valor"><img src="./img/bicicletas/Nebula.jpg" alt="Nebula Cosmic"></div>
+        <div class="valor nebula-valor"><img src="./img/bicicletas/nebula1.jpg" alt="Nebula Cosmic"></div>
         <div class="bicicletas-infos">
           <h2>Nebula Cosmic</h2>
           <p>A Nebula Cosmic é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
