--- a/bicicletas.html
+++ b/bicicletas.html
@@ -31,8 +31,8 @@
   </header>
   <section class="padding-bg titulo-bg">
     <div class="titulo-container">
-      <h3 class="font-2-l font-2-l-b">respostas em até 24h</h3>
-      <h1 class="font-1-xxl">nosso contato<span>.</span></h1>
+      <h3 class="font-2-l font-2-l-b">Escolha a melhor para você</h3>
+      <h1 class="font-1-xxl">nossas bicicletas<span>.</span></h1>
     </div>
   </section>
 
